--- a/app/views/cards/index/engagement/_closed.html.erb
+++ b/app/views/cards/index/engagement/_closed.html.erb
@@ -1,5 +1,9 @@
-<section id="closed-cards" class="cards cards--closed pad-block">
-  <h2 class="cards__heading"><span class="cards__filter btn non-clickable borderless">Recently closed</span></h2>
+<section id="closed-cards" class="cards cards--closed pad-block is-collapsed" style="--card-color: var(--color-black);"
+    data-controller="toggle-class" data-toggle-class-toggle-class="is-collapsed">
+  <div class="cards__expander btn btn--plain">
+    <strong class="font-weight-black cards__expander-count"><%= page.records.count %></strong>
+    <button class="btn btn--plain cards__expander-button txt-uppercase" data-action="toggle-class#toggle">Done</button>
+  </div>
 
   <% if page.used? %>
     <%= render partial: "cards/display/preview", collection: page.records, as: :card, cached: true %>
