Fix squashed users lists
Regressed in 9b1cd84f96b1e27b1bd6bac5771480ec9a9a733f cc: @andyra

--- a/app/views/columns/show/_add_card_button.html.erb
+++ b/app/views/columns/show/_add_card_button.html.erb
@@ -4,7 +4,7 @@
     <span>Add a card</span>
   <% end %>
 
-  <hr class="separator--horizontal" aria-hidden="true">
+  <hr class="separator--horizontal full-width" aria-hidden="true">
 
   <footer>
     <strong class="txt-uppercase">Watching for new cards</strong>
