Rename highlights -> summary

--- a/app/views/admin/prompt_sandboxes/show.html.erb
+++ b/app/views/admin/prompt_sandboxes/show.html.erb
@@ -28,7 +28,7 @@
   <div class="margin-block fill-shade txt-ink border border-radius pad">
     <h2 class="margin-block">Summary</h2>
     <div class="summary-content">
-      <%= @weekly_highlights&.to_html %>
+      <%= @weekly_summary&.to_html %>
     </div>
   </div>
 </div>
