--- a/app/views/events/_day.html.erb
+++ b/app/views/events/_day.html.erb
@@ -1,6 +1,6 @@
 <section class="events__day" data-controller="related-element"
   data-related-element-highlight-class="event--related">
   <%= render "events/day_timeline/columns", day_timeline: day_timeline %>
-  <%= render "events/weekly_highlights", day_timeline: day_timeline  %>
+  <%= render "events/weekly_summary", day_timeline: day_timeline  %>
   <%= render "events/empty_days", day_timeline: day_timeline %>
 </section>
