--- a/app/views/events/event/_attachments.html.erb
+++ b/app/views/events/event/_attachments.html.erb
@@ -1,29 +1,7 @@
 <% if eventable&.has_attachments? || eventable&.has_remote_images? || eventable&.has_remote_videos? %>
   <span class="event_attachments margin-block-half flex align-center gap-half">
-    <% eventable.attachments.each do |attachment| %>
-      <% variant = Attachments::VARIANTS[:small] %>
-      <% width = attachment.metadata["width"] %>
-      <% height = attachment.metadata["height"] %>
-
-      <% if attachment.previewable? %>
-        <%= image_tag url_for(attachment.preview(variant)), class: "attachment attachment--image", width: width, height: height %>
-      <% elsif attachment.variable? %>
-        <%= image_tag url_for(attachment.variant(variant)), class: "attachment attachment--image", width: width, height: height %>
-      <% else %>
-        <div class="attachment attachment--file attachment--<%= attachment.filename.extension -%>">
-          <span class="attachment__icon"><%= attachment.filename.extension&.downcase.presence || "unknown" %></span>
-        </div>
-      <% end %>
-    <% end %>
-
-    <% eventable.remote_images.each do |remote_image| %>
-      <%= image_tag remote_image.url, class: "attachment attachment--image", width: remote_image.width, height: remote_image.height %>
-    <% end %>
-
-    <% eventable.remote_videos.each do |remote_video| %>
-      <%= tag.video controls: true, class: "attachment attachment--video", width: remote_video.width, height: remote_video.height do %>
-        <%= tag.source src: remote_video.url, type: remote_video.content_type %>
-      <% end %>
-    <% end %>
+    <%= render partial: "events/event/attachments/attachment", collection: eventable.attachments %>
+    <%= render partial: "events/event/attachments/remote_image", collection: eventable.remote_images %>
+    <%= render partial: "events/event/attachments/remote_video", collection: eventable.remote_videos %>
   </span>
 <% end %>
