Add inline fizzy icon

--- a/app/views/my/menus/show.html.erb
+++ b/app/views/my/menus/show.html.erb
@@ -65,6 +65,6 @@
   <% end %>
 
   <footer class="nav__footer">
-    <strong><%= link_to "Fizzy™", "https://www.fizzy.do", class: "txt-ink", target: "_blank" %></strong> is designed, built, and backed by <strong class="txt-nowrap"><%= icon_tag "37signals", class: "v-align-middle", target: "_blank" %> <a href="https://37signals.com" target="_blank" class="txt-ink">37signals™</a></strong>
+    <strong class="txt-nowrap"><%= icon_tag "fizzy", class: "v-align-middle" %> <a href="https://www.fizzy.do" target="_blank" class="txt-ink">Fizzy™</a></strong> is designed, built, and backed by <strong class="txt-nowrap"><%= icon_tag "37signals", class: "v-align-middle" %> <a href="https://37signals.com" target="_blank" class="txt-ink">37signals™</a></strong>
   </footer>
 <% end %>
